Fixed an issue in layout where no sidebars in on tablet results in unwanted bottom padding.

--- a/packages/sdc/components/00-base/layout/layout.scss
+++ b/packages/sdc/components/00-base/layout/layout.scss
@@ -12,6 +12,12 @@
     @include ct-print-hide();
   }
 
+  &.ct-layout--no-top-left.ct-layout--no-top-right.ct-layout--no-bottom-left.ct-layout--no-bottom-right {
+    #{$root}__inner {
+      grid-template-rows: auto;
+    }
+  }
+
   &.ct-vertical-spacing--top {
     #{$root}.ct-vertical-spacing--top,
     #{$root}.ct-vertical-spacing--both {
